--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<!--<app-header></app-header>
-<router-outlet></router-outlet>-->
-
+<app-header></app-header>
+<router-outlet></router-outlet>
+<!--
 <div id="app">
     <nav class="navbar navbar-expand navbar-dark bg-dark">
       <a href="#" class="navbar-brand">bezKoder</a>
@@ -41,3 +41,4 @@
       <router-outlet></router-outlet>
     </div>
   </div>
+-->
