--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -16,11 +16,11 @@
 
   <div class="container">
 
-    <form class="login-form" #loginform="ngForm" (ngSubmit)="loginUser()">
+    <form class="login-form" #loginform="ngForm" (ngSubmit)="onSubmit()">
       
       <div class="login-wrap">
         <p class="login-img"><i class="icon_lock_alt"></i></p>
-        <small class="text-danger">{{msg}}</small>
+        <!--<small class="text-danger">{{msg}}</small>
         <div *ngIf="email.errors && (email.invalid && email.touched)">
           <small class="text-danger" *ngIf="email.errors.required">Email is required field!</small>
           <small class="text-danger" *ngIf="email.errors.pattern">Enter a valid email!</small>
@@ -30,9 +30,21 @@
           <input type="email" class="form-control"   placeholder="Email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
           [class.is-invalid]="email.invalid && email.touched">
           
+        </div>-->
+
+        <div class="float-right btextual">
+          <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
+        </div>
+        <div class="input-group">
+          
+          <span class="input-group-addon"><i class="icon_profile"></i></span>
+          <input type="text" class="form-control" placeholder="User name" 
+          name="userName" [(ngModel)]="form.userName" required #userName="ngModel"
+          [class.is-invalid]="userName.invalid && userName.touched"
+          >
         </div>
 
-        <div>
+        <!--<div>
           <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
        
         </div>
@@ -40,7 +52,22 @@
           <span class="input-group-addon"><i class="icon_key_alt"></i></span>
           <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="user.password" required #password="ngModel"
           [class.is-invalid]="password.invalid && password.touched">
-         </div>
+         </div>-->
+
+
+         <div class="float-right btextual">
+          <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
+       
+        </div>
+         <div class="input-group">
+          <span class="input-group-addon"><i class="icon_key_alt"></i></span>
+          <input type="password" class="form-control" placeholder="Password"
+           name="password" [(ngModel)]="form.password"
+            required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched" 
+          minlength="6">
+        </div>
+
         <label class="checkbox">
                 <input type="checkbox" value="remember-me"> Remember me
                 <span class="pull-right"> <a href="/login/#"> Forgot Password?</a></span>
@@ -49,6 +76,15 @@
         <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/registration']">Signup</button>
       </div>
     </form>
+
+<!--------------------------------------------------------------------------------------------------------->
+  
+    
+        <div class="alert alert-success" *ngIf="isLoggedIn">
+          Logged in as {{ roles }}.
+        </div>
+
+
     <div class="text-right">
       <div class="credits">
           <!--
