--- a/src/app/resgistration/resgistration.component.html
+++ b/src/app/resgistration/resgistration.component.html
@@ -18,9 +18,60 @@
 <body class="login-img3-body">
 
   <div class="container">
+    
 
-    <form class="login-form" #Registrationform="ngForm" (ngSubmit)="registerUser()">
-      
+    <!--<form class="login-form" #Registrationform="ngForm" (ngSubmit)="registerUser()">-->
+      <form class="login-form"
+      *ngIf="!isSuccessful"
+        name="form"
+        (ngSubmit)="f.form.valid && onSubmit()"
+        #f="ngForm"
+        novalidate>
+
+        <small class="text-danger">{{msg}}</small>
+        <div class="form-group">
+          <div class="float-right btextual" *ngIf="emailId.errors && (emailId.invalid && emailId.touched)">
+            <small class="text-danger" *ngIf="emailId.errors.required">Email is required field!</small>
+            <small class="text-danger" *ngIf="emailId.errors.pattern">Enter a valid email!</small>
+          </div>
+          <input type="email" class="form-control"  placeholder="Email" name="emailId"
+           [(ngModel)]="form.emailId" required 
+           pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #emailId="ngModel"
+          [class.is-invalid]="emailId.invalid && emailId.touched">
+        
+        
+        
+        </div>
+
+        <div class="form-group">
+          <div class="float-right btextual">
+            <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
+          </div>
+          <input type="text" class="form-control" placeholder="User name" 
+          name="userName" [(ngModel)]="form.userName" required #userName="ngModel"
+          [class.is-invalid]="userName.invalid && userName.touched"
+          >
+        </div>
+
+        <div class="form-group">
+          <div class="float-right btextual" *ngIf="password.errors && (password.invalid && emailId.touched)">
+            <small class="text-danger" *ngIf="password.errors.required">password is required field!</small>
+            <div *ngIf="password.errors.minlength">
+              <small class="text-danger">Password must be at least 6 characters</small>
+            </div>
+          </div>
+           
+          
+          <input type="password" class="form-control" placeholder="Password"
+           name="password" [(ngModel)]="form.password"
+            required #password="ngModel"
+          [class.is-invalid]="password.invalid && password.touched" 
+          minlength="6">
+        </div>
+
+
+
+      <!--
       <div class="login-wrap">
         <small class="text-danger">{{msg}}</small>
         <div class="float-right btextual" *ngIf="email.errors && (email.invalid && email.touched)">
@@ -29,7 +80,9 @@
         </div>
         <div class="input-group">
           
-          <input type="email" class="form-control"  placeholder="Email" name="email" [(ngModel)]="user.emailId" required pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
+          <input type="email" class="form-control"  placeholder="Email" name="email"
+           [(ngModel)]="form.emailId" required 
+           pattern="^\w+@[a-zA-Z_]+?\.[a-zA-Z]{2,3}$" #email="ngModel"
           [class.is-invalid]="email.invalid && email.touched">
           
         </div>
@@ -40,7 +93,7 @@
           <small class="text-danger" [class.d-none]="userName.valid || userName.untouched">User name is required field!</small>
         </div>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="User name" name="userName" [(ngModel)]="user.userName" required #userName="ngModel"
+          <input type="text" class="form-control" placeholder="User name" name="userName" [(ngModel)]="form.userName" required #userName="ngModel"
           [class.is-invalid]="userName.invalid && userName.touched"
           >
         </div>
@@ -49,29 +102,35 @@
           <small class="text-danger" [class.d-none]="password.valid || password.untouched">password is required field!</small>
         </div>
         <div class="input-group">
-          <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="user.password" required #password="ngModel"
+          <input type="password" class="form-control" placeholder="Password" name="password" [(ngModel)]="form.password" required #password="ngModel"
           [class.is-invalid]="password.invalid && password.touched" data-rule="minlen:8" data-msg="Please enter at least 8 chars">
          </div>
+        -->
 
-
-         <div class="float-right btextual">
+         <!--<div class="float-right btextual">
           <small class="text-danger" [class.d-none]="(pwd.value == password.value) || pwd.untouched">password and confirm password must be the same!</small>
          </div>
          <div class="input-group">
-          <input type="password" class="form-control" placeholder="Confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="user.confirmPassword" required 
+          <input type="password" class="form-control" placeholder="Confirm password" name="pwd" #pwd="ngModel" [(ngModel)]="form.confirmPassword" required 
             [class.is-invalid]="pwd.invalid && pwd.touched">
           </div>
+        -->
+      <!-- 
+        <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/login']">Login</button>
+      </div>-->
 
-        <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="Registrationform.form.invalid">Signup</button>
-        
+     
+      <div class="form-group"> 
+        <button class="btn btn-primary btn-lg btn-block" type="submit" [disabled]="f.form.invalid">Sign up</button>
         <button class="btn btn-info btn-lg btn-block" type="submit" [routerLink]="['/login']">Login</button>
       </div>
+
+      <div class="alert alert-warning" *ngIf="f.submitted && isSignUpFailed">
+        Signup failed!<br />{{ errorMessage }}
+      </div>
+      
     </form>
-    <div class="text-right">
-      <div class="credits">
-         
-        </div>
-    </div>
+   
   </div>
 
 
